test_programs/compile_failure/noirc_frontend_tests_traits_errors_on_incorrect_generics_in_type_trait_call/src/main.nr

        trait From2<T> {
        fn from2(input: T) -> Self;
    }
    struct U60Repr {}
    impl From2<[i32; 3]> for U60Repr {
        fn from2(_: [i32; 3]) -> Self {
            U60Repr {}
        }
    }
    impl From2<i32> for U60Repr {
        fn from2(_: i32) -> Self {
            U60Repr {}
        }
    }

    fn main() {
        let _ = U60Repr::<i32>::from2([1, 2, 3]);
    }
    